feat: add simple filter to rentals getAll